updated index.html file

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
             color: #333;
         }
 
+        .profile-image {
+            display: block;        
+            margin-left: auto;      
+            margin-right: auto;     
+            width: 200px;              
+            margin-top: 20px;       
+        }
+
         .container {
             max-width: 900px;
             margin: 0 auto;
@@ -76,11 +84,15 @@
     </style>
 </head>
 <body>
+
+    
+
     <div class="container">
+        <img src="https://github.com/nishaadh/digital-resume-nishaadhikari/raw/main/headshot.jpg" alt="Profile Image" class="profile-image">
         <header>
-            <h1>Nisha Adhikari</h1>
+            <h1 style="text-align: center;">Nisha Adhikari</h1>
             <div class="header-info">
-                <p>na731@msstate.edu | 662-338-6928 | Starkville, MS | <a href="https://www.linkedin.com/in/nisha-adhikari-na" target="_blank"><i>Linkedin</i></a></p>
+                <p style="text-align: center;">na731@msstate.edu | 662-338-6928 | Starkville, MS | <a href="https://www.linkedin.com/in/nisha-adhikari-na" target="_blank"><i>Linkedin</i></a></p>
             </div>
         </header>
 
@@ -217,7 +229,7 @@
             <p><strong>Publications:</strong></p>
             <p>
                 • Moore, Joshua, Adhikari, Nisha, Abdalla, Aly S., and Marojevic, Vuk. "Toward Secure and Efficient O-RAN Deployments: Secure Slicing xApp Use Case." IEEE Future Networks World Forum (FNWF). 
-                <a href="https://par.nsf.gov/biblio/10479582" target="_blank"><i>Link to Paper</i></a><br>
+                <a href="https://par.nsf.gov/biblio/10479582" target="_blank"><i>Link to Paper</i></a><br><br>
                 • A.S. Abdalla, J. Moore, N. Adhikari, V. Marojevic, "ZTRAN: Prototyping Zero Trust Security xApps for Open Radio Access Network Deployments," IEEE Wireless Commun., pp. 1-8, Accepted.
                 </p>
         </section>
