updating index.html file

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <section>
             <h2 class="section-title">SUMMARY</h2>
-            <p>Motivated senior seeking opportunities to enhance skills and knowledge in hardware and software integration. Interested in expanding and gaining experience with FPGA system design and testing.</p>
+            <p>Senior computer engineering student seeking opportunities to enhance skills and knowledge in hardware and software integration. Interested in expanding and gaining experience with FPGA system design and testing.</p>
         </section>
 
         <section>
@@ -172,10 +172,10 @@
                 <li>
                     <p>
                         Undergraduate Student Researcher for the Open Artificial Intelligence Cellular (OAIC) Project. This project aims to develop 6G applications by integrating 4G/5G components and Machine Learning.<br>
-                        • Assist in xApp development (C++/Python) and project/software installation and troubleshooting.<br>
-                        • Conduct experiments and testing of xApps using SDRs/USRPs and virtual simulations using ZeroMQ tool.<br>
-                        • Conduct experiments, collect, and analyze data using Python tools like NumPy to present findings in discussions and meetings.<br>
-                        • Create technical documentation for experiments and project installation and update regularly on GitHub.<br><br>
+                        • Assisted in xApp development (C++/Python) and project/software installation and troubleshooting.<br>
+                        • Conducted experiments and testing of xApps using SDRs/USRPs and virtual simulations using ZeroMQ tool.<br>
+                        • Conducted experiments, collect, and analyze data using Python tools like NumPy to present findings in discussions and meetings.<br>
+                        • Created technical documentation for experiments and project installation and update regularly on GitHub.<br><br>
                         
                     </p>
                 </li>
@@ -206,7 +206,7 @@
                 <li>
                     <strong>Sneak-Peek:</strong> An e-commerce website application designed using HTML, CSS, and JavaScript for front-end design, 
                     and python Django with SQLite DB for back-end/server-side design. The core design of project identifies three user classes, Buyer, Seller, and Admin with different privileges and functionalities for each class.
-                    <a href="https://github.com/nishaadh/Sneak-Peek" target="_blank"><i>Github Repository</i></a><br>
+                    <a href="https://github.com/nishaadh/Sneak-Peek" target="_blank"><i>Project Repository</i></a><br>
                 </li>
             </ul>
         </section>
