updating index.html file

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <ul class="education-list">
                 <li class="education-item">
                     <span><strong>Mississippi State University</strong></span>
-                    <span><strong>Dec, 2025</strong></span>
+                    <span><strong>Dec. 2025</strong></span>
                 </li>
                 <li class="education-item">
                     <span><i>B.S., Computer Engineering, Mathematics Minor</i></span>
